style/main.css
/*************************************************START FOR TOP-NAV******************************************************************/
/* nav menu */
.topnav .icon {
  display: none;
}

.topnav {
  background-color: #38003c;
  overflow: hidden;
  padding-left: 10%;
  padding-right: 10%;
  position: fixed;
  top: 0;
  margin: 0;
  width: 100%;
  max-height: 10%;
}

.topnav a {
  display: block;
  color: #00ff85;
  text-align: center;
  padding: 1.5% 1% 1.5% 1%;
  text-decoration: none;
  font-size: 111%;
  width: fit-content;
}

.menu {
    float: right;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}

.logo {
  color: white;
  float: left;
}

p .icon {
  display: none;
}

        /******************query for mobile phones******************************/
  @media screen and (max-width: 600px) {
    .topnav a:not(:first-child) {display: none;}
    .topnav a.icon {
      float: right;
      display: block;
    }

    .topnav.responsive {position: relative;}
    .topnav.responsive a.icon {
      position: absolute;
      right: 0;
      top: 0;
    }
    .topnav.responsive a {
      float: none;
      display: block;
      text-align: left;
    }

    .office-list li {display: none;}
    p a.icon {
      display: inline;
    }
    .office-list.responsive li {
      float: none;
      display: block;
      text-align: left;
    }
    .submit-wrap button {
      display: none;
    }
    .submit-wrap.responsive button { display: inline; }
    

    .office-list.responsive {position: relative; top: 10%; left: 0%;} 
    /*p a.icon {
      position: absolute;
    }*/

    .candidate, .votes {
      display: inline-block;
      text-align: center;
    }
    .votes {
      float: center;
    }

    .results {
        padding: 0;
    }
  }
/******************query for mobile phones******************************/
/*************************************************END FOR NAVS******************************************************************/



/*************************************************************START PAGE CONTENT/BODY*******************************************/
body {
    margin: 0;
    padding: 0;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
      sans-serif;
      /*background-image: url("../images/background.jpg");*/
      color: #38003c;
      font-weight: bold;
      background-color: #f2f2f2;
  }

body.home {
  background-image: url("../images/background.jpg");
  color: #04f5ff;
}

/*body.home .topnav {
  background-color: #04f5ff;
}

body.home .topnav a {
  color: #38003c;
}*/

.content {
  padding: 5% 5% 10% 5%;
  margin-top:0;
  margin-bottom: 0;
  height: 110%;
  border-radius: 5px;
  width: 100%;
}

hr {
  color:  #04f5ff;
}

.center {
  margin: auto;
  width: 60%;
  padding: 1%;
  align-items: center;
}

.title {
  font-weight: bold;
  height: 10px;
}

.dash {
  font-size: 120%;
}

a {
  color:#e90052;
}

.h_center, .submit-wrap {
  text-align: center;
}

li:not(.nav_item) {
  margin: 10px;
}

.hide {
  display: none;
}

.action {
  display: none;
}
/*************************************************************END PAGE CONTENT/BODY*******************************************/



/*************************************************START FOR GRID******************************************************************/
* {
  box-sizing: border-box;
}

/* For mobile phones: */
[class*="col-"], .center {
	width: 93%;
	float: left;
	margin-left: 2.5%;
	margin-right: 5%;
}
 
@media only screen and (min-width: 600px) {
	/* For tablets: */
	.col-s-1 {width: 8.33%;}
	.col-s-2 {width: 16.66%;}
	.col-s-3 {width: 25%;}
	.col-s-4 {width: 33.33%;}
	.col-s-5 {width: 41.66%;}
	.col-s-6 {width: 50%;}
	.col-s-7 {width: 58.33%;}
	.col-s-8 {width: 66.66%;}
	.col-s-9 {width: 75%;}
	.col-s-10 {width: 83.33%;}
	.col-s-11 {width: 91.66%;}
	.col-s-12 {width: 100%;}
	.center {
		margin: auto;
		width: 100%;
		padding-left: 15%;
		padding-right: 15%;
		align-items: center;
	}
  }
  
  @media only screen and (min-width: 768px) {
	/* For desktop: */
	.col-1 {width: 8.33%;}
	.col-2 {width: 16.66%;}
	.col-3 {width: 25%;}
	.col-4 {width: 33.33%;}
	.col-5 {width: 41.66%;}
	.col-6 {width: 50%;}
	.col-7 {width: 58.33%;}
	.col-8 {width: 66.66%;}
	.col-9 {width: 75%;}
	.col-10 {width: 83.33%;}
	.col-11 {width: 91.66%;}
	.col-12 {width: 100%;}
  }

  @media only screen and (orientation: landscape) {
	.topnav {
		max-height: 20%;
	  }
	  .border-form {
		margin-top: 5%;
	  }
  }

  /* Medium devices (landscape tablets, 768px and up) */
  @media only screen and (min-width: 768px) {
	.example {background: blue;}
  }

  .row::after {
	content: "";
	clear: both;
	display: table;
  }
/*************************************************END FOR FORMS******************************************************************/



/*************************************************START FOR FORMS******************************************************************/
input[type=email], input[type=password], input[type=text], input[type=number], input[type=file], select, textarea {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: block;
  border: 1px solid #38003c;
  border-radius: 4px;
  box-sizing: border-box;
  align-self: auto;
  font-weight: bold;
  font-size:  97%;
  text-align: center;
}

.large-form .submit-wrap {
    padding-top: 3%;
}

input[type=submit]:hover, button:hover, .blend:hover {
  background-color: #00ff85;
  color: #38003c;
}

input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, input[type=email]:focus, input[type=number]:focus{
  border: 3px solid #00ff85;
}

input[type=submit], button {
  width: fit-content;
  background-color: #38003c;
  color: #00ff85;
  padding: 12px 20px;
  margin: 8px 0;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-weight: bold;
}

button.cancel:hover {
  background-color: #ff0800;
  color: white;
}

.border-form {
  border: #00ff85 solid;
  padding: 2%;
  align-items: center;
  /*background-image: url("../images/background2.png");*/
  color: white;
}

.border-form input[type=submit] {
  background-color: #00ff85;
  color: #38003c;
  font-weight: bolder;
  font-size: 120%;
}

.border-form input[type=email]:focus,.border-form input[type=password]:focus{
  border: 3px solid white;
}

.border-form input[type=email], .border-form input[type=password]{
  background-color: #04f5ff;
  color: #38003c;
  border: 3px solid #38003c;
}

.border-form p {
  color: #04f5ff;
}

.border-form a {
  color: white;
}

form li {
  list-style-position: inside;
  list-style-type: none; 
}
/*************************************************END FOR FORMS******************************************************************/



/***********************************************************FOR ALERTS******************************************************/
.alert {
  padding: 1%;
  color: #38003c;
  text-align: center;
}

.closebtn {
  margin-left: 15px;
  color: white;
  font-weight: bold;
  float: right;
  font-size: 22px;
  line-height: 20px;
  cursor: pointer;
  transition: 3s;
}

.closebtn:hover {
  color: black;
}

.alert.success {background-color: #00ff85;}
.alert.info {background-color: #04f5ff;}
.alert.warning {background-color: #ff9800;}
.alert.danger {background-color: #ff0800;}
/***********************************************************FOR ALERTS******************************************************/



/***********************************************************FOR MENU LISTS INSIDE BODY******************************************************/
.menu li {
  padding: 8px;
  margin-bottom: 7px;
  background-color:  #00ff85;
  color: #38003c;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.menu li:hover {
  background-color: #38003c;
  color: #00ff85;
}

.menu ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

/***********************************************************FOR MENU LISTS INSIDE BODY******************************************************/


/*******************************************FOR RESULTS, VOTE, OFFICES PAGES******************************************/
.results {
  padding: 2%;
}

.result-item {
  border: #38003c solid;
  margin: 2%;
  padding: 1%;
  background-color: #38003c;
  color: white;
}

.result-item p {
  color: #04f5ff;
}

#petition-div {
margin: 2%;
padding: 2% 5% 2% 5%;
/*background-color: #00ff85;*/
border: #38003c dashed;
}

.winner {
/*background-color: #04f5ff;*/
color: #00ff85;
}

.votes {
float: right;
font-weight: bold;
}

.result-item li {
padding-right: 2%;
border-bottom: white solid;
height: 50px;
border-bottom-width: 90%;
margin-right: 2%;
}
.vote-list-title {
  border: #38003c solid;
  margin: 2%;
  padding: 1%;
  background-color: #38003c;
  color: white;
}

.vote-item {
  border: #38003c solid;
  margin: 2%;
  padding: 1%;
  background-color:  #38003c;
}

.office-title {
  float: right;
  color: #04f5ff;
}

.office-title-title {
  float: right
}

.candidate-name {
  color: #00ff85;
}

button.blend {
  background-color: #38003c;
}

.submit-div {
  padding: 10%;
}

.run-div .submit-wrap {
  padding: 25% 0% 30% 0%;
  margin: 30%;
}
/*******************************************FOR RESULTS, VOTE, OFFICES PAGES******************************************/

        /* modals */
.modal {
  display: none; 
  position: fixed; 
  z-index: 1; 
  left: 0;
  top: 0;
  width: 100%; 
  height: 100%; 
  overflow: auto; 
  background-color: rgb(0,0,0); 
  background-color: rgba(0,0,0,0.4); 
}


.modal-content {
  background-color: #fefefe;
  margin: 15% auto; 
  padding: 20px;
  border: 1px solid #888;
  width: 80%; 
}


.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.error {
  color: red;
}

/*.success {
  color: lawngreen;
}*/

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}
    /* modals */

